@@ -56,7 +56,7 @@
 #__ORIGINAL__
 
 
-INCLUDES=$(INCLUDES1) $(INCLUDES_DEPTH2) $(EXTRA_INCLUDES)
+INCLUDES=$(INCLUDES1) $(INCLUDES0) $(INCLUDES_DEPTH2) $(EXTRA_INCLUDES)
 
 SHELL = /bin/sh
 
